Modificacion patron control de inversion

--- a/ServidorWEB/src/main/resources/index.html
+++ b/ServidorWEB/src/main/resources/index.html
@@ -6,14 +6,13 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>Aplicacion Cuadrado</title>
+        <title>Aplicacion</title>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
         <form>
             Number:<input type="text" name="Cuadrado" id ="number">
-            <input type="submit" value="Submit" onClick='this.form.action="/cuadrado/" + document.getElementById("number").value'>
+            <input type="submit" value="Submit" onClick='this.form.action="/response/Cuadrado/" + document.getElementById("number").value'>
         </form>
     </body>
 </html>
